# transit-engine

./: .env.development.example  .env.example  .env.production.example  .gitignore  DEPLOYMENT.md  Dockerfile  FRONTEND_GUIDE.md  README.md  SUPABASE.md  alembic.ini  blueprint.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  transit-engine-agent-guide.md
.github/workflows/: ci.yml  deploy-fastapi-cloud.yml  deploy-huggingface.yml  keep-alive.yml  migrate-database.yml
app/: __init__.py  main.py
app/core/: config.py
app/db/: __init__.py  models.py  session.py  transit_repository.py  transit_writer.py
app/fares/: __init__.py  catalog.py  engine.py
app/geocoding/: __init__.py  service.py
app/ingestion/: __init__.py
app/models/: __init__.py  schema.py
app/routers/: __init__.py  data_refresh.py  geocode.py  health.py  network.py  route_search.py  stops.py
app/routing/: __init__.py  flexible.py  geojson_builder.py  graph.py  graph_cache.py  pathfinder.py  pedestrian.py  schedule_cache.py  schedules.py  stop_directory.py  traffic.py  transfers.py  weather.py  weights.py
docs/: DATA_SOURCES.md
scratch/: alter_table.py  check_indexes.py  fetch_osm_angkot.py  fetch_test.py  inspect_sman38.py  list_stops.py  query_test.py  smoke_cases.py  smoke_verbose.py  test_bikun_routing.py  test_dns.py  test_resolve.py  test_routing.py  verify_sman38_kota.py
supabase/: .gitignore  config.toml
tests/: test_geocode_api.py  test_geocoding_service.py  test_multimodal_network.py  test_real_db.py  test_route_search_api.py  test_stops_api.py
(+61 files in other folders)
