[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transit-engine"
version = "0.1.0"
description = "Multi-modal Jabodetabek transit routing service"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
  "alembic>=1.14,<2.0",
  "asyncpg>=0.30,<1.0",
  "fastapi>=0.115,<1.0",
  "geoalchemy2>=0.16,<1.0",
  "networkx>=3.4,<4.0",
  "pydantic-settings>=2.7,<3.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.34,<1.0",
]

[dependency-groups]
dev = [
  "black>=25.0,<26.0",
  "httpx>=0.28,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.25,<1.0",
  "ruff>=0.9,<1.0",
]
deploy = ["huggingface-hub>=0.30,<1.0"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["app/routing/tests", "tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py311"]

